# nexus-agent

./: .gitignore  README.md  README.zh-CN.md  launch-dev.command  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: package.json  tsconfig.json
backend/scripts/: fix-verify.ts  tool-smoke.ts
backend/sidecars/: feishu-bridge.mjs  gitlab-mcp.mjs  k8s-mcp.mjs  schedule-mcp.mjs
backend/src/attachments/: attachment-store.ts
backend/src/cache/: immutable-prefix.ts  prefix-volatility.ts  tool-catalog-fingerprint.ts
backend/src/cli/: agent-cli-entry.ts  agent-cli.ts  serve-entry.ts  serve.ts
backend/src/config/: config.ts  secret-redaction.ts
backend/src/contracts/: agents.ts  approvals.ts  attachments.ts  audio.ts  capabilities.ts  connectors.ts  errors.ts  events.ts  items.ts  memory.ts  phone.ts  plan.ts  policy.ts  review.ts  runtime-info.ts  schedule.ts  threads.ts  turns.ts  usage.ts
backend/src/delegation/: child-agent-executor.ts  delegation-runtime.ts  file-delegation-store.ts
backend/src/domain/: item.ts  model-history-repair.ts  model-history.ts  thread.ts  turn.ts
backend/src/hooks/: hook-config.ts  hook-engine.ts
backend/src/loop/: agent-loop.ts  (+11 more)
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  dev.entitlements  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+119 files in other folders)
